<?xml version="1.0"?>
<package format="3">
  <name>analyse</name>
  <version>0.0.1</version>
  <description>Offline trajectory error analysis tools for gnssFGO CSV logs.</description>
  <maintainer email="yukinosome@qq.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
